# Colabie

./: .gitignore  CONTRIBUTING.md  Cargo.toml  in codebase: 1) Add username existence check, 2) Implement secure key storage, 3) Improve cryptographic methods"
.cargo/: config.toml
.github/workflows/: format.yaml  rust.yml
clientie/: Cargo.toml  glue.js
clientie/src/: lib.rs  servie_conn.rs  ws.rs
clientie/web/: msg.html  register.html
registrie/: Cargo.toml
registrie/src/: db.rs  errors.rs  lib.rs  main.rs  utils.rs
schemou/: Cargo.toml
schemou/schemou-macro/: Cargo.toml
schemou/schemou-macro/src/: derive.rs  lib.rs
schemou/src/: axum.rs  error.rs  impls.rs  lib.rs  main.rs
schemou/src/legos/: short_id_str.rs
schemou/tests/: proc_macro.rs
servie/: .env  Cargo.toml
servie/src/: lib.rs  main.rs  mirror.rs  user_channels.rs
xtasks/: Cargo.toml
xtasks/src/: clientie.rs  lib.rs  main.rs  registrie.rs  servie.rs
