[package]
name = "clientie"
version = "0.0.1-pr"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
schemou = { path = "../schemou" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
futures = "0.3.31"
web-sys = { version = "0.3.77", features = ["WebSocket", "ErrorEvent", "MessageEvent", "BinaryType"] }

fips204 = "0.4"
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
