[package]
name = "servie"
version = "0.0.1-pr"
edition = "2021"

[dependencies]
schemou = { path = "../schemou", features = ["axum"] }
registrie = { path = "../registrie" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
git2 = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
dotenvy = "0.15.7"
base64 = "0.21.7"
fips204 = "0.4.6"
